# rentbot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: .gitkeep  Dockerfile.core  docker-compose.yml
docker/env/: prod.env.example  staging.env.example
rentbot/: __init__.py  __main__.py
rentbot/core/: __init__.py  criteria.py  events.py  exceptions.py  ids.py  logging_config.py  models.py  run_context.py  settings.py
rentbot/filters/: __init__.py  heuristic.py
rentbot/notifiers/: __init__.py  formatter.py  notifier.py  telegram.py
rentbot/orchestrator/: __init__.py  circuit_breaker.py  metrics.py  pipeline.py  runner.py  scheduler.py
rentbot/providers/: __init__.py  base.py  normalizers.py
rentbot/providers/api/: __init__.py  casa.py  http_client.py  immobiliare.py  subito.py
rentbot/providers/browser/: __init__.py
rentbot/storage/: __init__.py  database.py  repository.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_providers_e3.py  test_telegram_e2.py
tests/unit/: __init__.py  test_core_e1.py  test_failure_scenarios_e8.py  test_notifier_e2.py  test_observability_e8.py  test_orchestrator_e6.py  test_pipeline_smoke_e8.py  test_providers_e3.py  test_smoke.py
