[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rentbot"
version = "0.1.0"
description = "Real-time Italian rental listing monitor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Async HTTP client with connection pooling
    "httpx>=0.27,<1",
    # Data validation and settings (Pydantic v2)
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    # Environment variable loading
    "python-dotenv>=1.0,<2",
    # Retry library with exponential backoff
    "tenacity>=8.3,<9",
    # Async SQLite driver
    "aiosqlite>=0.20,<1",
    # Task scheduling (3.x stable; 4.x still in beta)
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1",
    "mypy>=1.15,<2",
]
test = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-mock>=3.14,<4",
]
browser = [
    "playwright>=1.44,<2",
]
llm = [
    # OpenAI (gpt-4o-mini) and Anthropic (claude-3-haiku) for unstructured text parsing
    "openai>=1.30,<2",
    "anthropic>=0.27,<1",
]

[project.scripts]
rentbot = "rentbot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rentbot*"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes; I: isort; UP: pyupgrade; B: bugbear; SIM: simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["rentbot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Pydantic plugin for accurate model type inference
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    # pytest-asyncio uses deprecated event-loop-policy APIs in Python 3.14+.
    # These are internal to the test framework, not our code.
    "ignore::DeprecationWarning:pytest_asyncio",
]
markers = [
    "integration: marks tests that talk to real external services (skip with '-m not integration')",
]
